V0.5
player attack now pauses when you hold down space bar so you can time your attacks better
player death animation now plays once then display the game over screen once you're just led on the floor.
minor redesign of main runnning function - placeholder user interface created. game over screen can now loop back around
to play the game again.


V0.4
more work on collisions - player can now die but only on certain conditions, enemiies can die
basic death animation sorted - the layers are totally wrong though so looks a bit weird.
but it plays the animation when you die - had to disable the game over screen to get this to work.

V0.3
created enemy factory, created small enemies
pulled out load animations into a helper function
finally got around to adding comments and doc strings to funcs and classes.
player now finishes full attack sequence per attack, disables all other abilities
enemy now faces correct direction
animate helper function created - stops repeated code of selecting images to animate
created big enemy class
added random speeds to enemies
added crude - semi working collision detection

V 0.2
Finished up random background generation
turned character into sprite
background now draws around any object passed in - will need to test this when I have multiple object.

V 0.1
Created main game controller consisting of -
    main loop
    game setup
    drawing
    updating

Created player with the following capability -
    moving
    animations

Modified the idle breathing of the golden knight so he now holds his sword - only works correctly when facing right.
Modified the moving right and left animation so they align correctly with the idle animations.

Added background image
Added a sound controller --- This is currently broken but it's too damn late.